--- a/fantasticsearch/templates/header.html
+++ b/fantasticsearch/templates/header.html
@@ -1,4 +1,4 @@
-<form name="input" action="/search" method="get">
+<form name="input" action="/tinsearch" method="get">
   <nav>
     <div class="nav-wrapper">
         <div class="input-field deep-purple lighten-3">
