--- a/fantasticsearch/templates/container.html
+++ b/fantasticsearch/templates/container.html
@@ -31,7 +31,6 @@
 	</ul>
 </div>
 
-
 <div class="col s12 m8 l9 teal lighten-2"> 
     <div class="row">	
 	<div class="col s6">
@@ -40,14 +39,12 @@
 	</div>
 </div>
 
-
-
 <div id="container" class="row">
 {% for doc in results.hits.hits %}
 <div class="col s10 m6 l4">	
 	<div class="card small teal lighten-5"><!-- TODO: Change title and imageUrl accordingly to your fieldnames-->
 		<div class="card-image waves-effect waves-block waves-light">
-			<img class="activator" src={{doc._source.imageUrl}} alt="{{doc._source.title}}">
+			<img class="activator" src="{{doc._source.imageUrl}}" alt="{{doc._source.title}}">
 		</div>
 		<div class="card-content">
 	   		<span class="card-title activator grey-text text-darken-4">Info<i class="mdi-navigation-more-vert right"></i></span>
