--- a/fantasticsearch/templates/index.html
+++ b/fantasticsearch/templates/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/css/materialize.min.css">      
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js" type='text/javascript'></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js" type='text/javascript'></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/js/materialize.min.js"></script>
     <script src="{{ url_for('static', filename='script.js') }}" type='text/javascript'></script>
 
